@@ -739,7 +739,7 @@ class zbxXML{
 						}
 
 						if(!empty($applications_to_add)){
-							$new_applications = CApplication::add($applications_to_add);
+							$new_applications = CApplication::create($applications_to_add);
 							if($new_applications === false){
 								error(CApplication::resetErrors());
 								$result = false;
@@ -763,7 +763,7 @@ class zbxXML{
 						if(!$current_item && isset($rules['item']['missed'])){
 							$item_db['hostid'] = $current_host['hostid'];
 
-							$current_item = CItem::add($item_db);
+							$current_item = CItem::create($item_db);
 							if($current_item === false){
 								error(CItem::resetErrors());
 								$result = false;
@@ -816,7 +816,7 @@ class zbxXML{
 					}
 
 					if(!empty($triggers_to_add)){
-						$added_triggers = CTrigger::add($triggers_to_add);
+						$added_triggers = CTrigger::create($triggers_to_add);
 						if($added_triggers === false){
 							error(CTrigger::resetErrors());
 							$result = false;
@@ -932,7 +932,7 @@ class zbxXML{
 						$graphs_to_add[] = $graph_db;
 					}
 //sdii($graphs_to_add);
-					$r = CGraph::add($graphs_to_add);
+					$r = CGraph::create($graphs_to_add);
 					if($r === false){
 						error(CGraph::resetErrors());
 						$result = false;
