@@ -1,5 +1,9 @@
 Changes for 1.8.1
 
+ - [ZBX-1427] fixed adding Actions through API (Aly)
+ - [ZBX-1810] fixed adding user media through API (Aly)
+ - [ZBX-1818] fixed API inner inconsistency in method naming (Aly)
+ - [ZBX-1818] changed API version (Aly)
  - [ZBX-3] remove a comment saying syslog is used until it works from proxy config file as well (Richlv)
  - [ZBX-1801] fixed action disable link (Vedmak)
  - [ZBX-1763] added last week to SLA weekly graph (Aly)
